--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "twig/twig": "^3.22"
+        "twig/twig": "^3.22",
+        "phpmailer/phpmailer": "^7.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^7.3"
